<resources>
    <string name="app_name">BHHS lux</string>
    <string name="button_for_go_back_description">Button for go back</string>
    <string name="icon_of_the_app">Icon of the app</string>
    <string name="open_map">Open Map</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="berkshire_hathaway">BERKSHIRE HATHAWAY</string>
    <string name="homeservices">HomeServices</string>
    <string name="georgia_properties">Georgia Properties</string>
    <string name="hint_search">Zip,City &amp; State, or Address</string>

    <string name="menu_nearby_house_for_sale">Nearby For Sale</string>
    <string name="menu_new_To_Market">New To Market</string>
    <string name="menu_price_change">Price Change</string>
    <string name="menu_open_house">Open Houses</string>
    <string name="menu_nearby_house_for_rent">Nearby For Rent</string>
    <string name="menu_nearby_recently_sold">Nearby Recently Sold</string>
    <string name="menu_advanced_search">Advanced Search</string>
    <string name="menu_find_agent_office">Find Agent/Office</string>
    <string name="menu_saved_properties">Saved Properties</string>
    <string name="menu_saved_searches">Saved Searches</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_app_help">App Help</string>
    <string name="menu_login">Login</string>
    <string name="menu_accessibility">Accessibility</string>
    <string name="botton_menu_contact">Contact</string>
    <string name="botton_menu_sort">Sort</string>
    <string name="botton_menu_refine">Refine</string>
    <string name="botton_menu_share">Share</string>
    <string name="botton_menu_save">Save</string>


    <string name="email_text">"*** Technical Details ***\n""\n""App Version: 5.800.70\n""Device Language: en-US\n""Phone: 5707109829\n""IP: 82.185.162.170\n""Signature App Id: 198\n""Title: BHHS\n""Build: PROD\n""Brand Name: Berkshire Hathaway HomeServices\n""Authenticated as Agent: No\n""Model: BLA-A09\n""Phone Brand :HUAWEI\n""\n""Carrier :\n""\n""SDK Version: 28\n""Android Version: 9\n""Screen Height: 1360\n""Screen Width: 720"</string>
    <string name="email_subject">[BHHS] App Help</string>
    <string name="email_to">mailto: bhhshelp@smarteragent.com</string>


    <string name="type_link">text/plain</string>
    <string name="link_share">Download Berkshire Hathaway HomeServices mobile app here: http://app.bhhsre.com/BHHS</string>
    <string name="url_accessibility">https://www.homeservices.com/accessibility.aspx</string>
    <string name="hodnett_cooper_real_estate">Hodnett Cooper Real Estate</string>
    <string name="call_to_see">Call to See</string>
    <string name="contact">CONTACT</string>
    <string name="email_for_info">Email for info</string>
    <string name="cancel">Cancel</string>
    <string name="icon">Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="mail_icon">Mail Icon</string>
    <string name="number_phone_to_call">tel:  2084595326</string>
    <string name="sort_by">SORT BY</string>
    <string name="distance_closes_first">Default</string>
    <string name="price_low_to_high">Price, Low to High</string>
    <string name="price_high_to_low">Price, High to Low</string>
    <string name="login_to_berkshire_hathaway_homeservices_home_search_s_app">Login to Berkshire Hathaway HomeServices Home Search\'s app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sso_1_4">SSO 1.4</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_input">Email*</string>
    <string name="password_input">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="version_register">SSO 1.1</string>
    <string name="new_to_market">New to Market</string>
    <string name="open_house">Open House</string>
    <string name="listing_details">Listing Details</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="sub_division">Sub Division</string>
    <string name="county">County</string>
    <string name="year_built">Year Built</string>
    <string name="bath_icon">bath icon</string>
    <string name="bed_icon">bed icon</string>
    <string name="picture_of_the_house">Picture of the house</string>
    <string name="high_school">High School</string>
    <string name="middle_school">Middle School</string>
    <string name="elementary_school">Elementary School</string>
    <string name="beds">Beds</string>
    <string name="full_baths">Full Baths</string>
    <string name="half_baths">Half Baths</string>
    <string name="sq_ft">Sq. Ft.</string>
    <string name="lot_size">Lot Size</string>
    <string name="taxes_year">Taxes/Year</string>
    <string name="listing_id">Listing Id</string>
    <string name="listing_povided_n_courtesy_of">Listing Povided \n  Courtesy Of</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="search_type">Search Type:</string>
    <string name="address_city_and_state_zip">Address, City and State, Zip</string>
    <string name="nav">nav</string>
    <string name="status_advanced">Status:</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="min_price">Min Price:</string>
    <string name="enter_minimum_price">Enter minimum Price</string>
    <string name="enter_max_price">Enter Max Price</string>
    <string name="enter_how_many_beds">Enter how many beds</string>
    <string name="enter_how_many_baths">Enter how many baths</string>
    <string name="new_listing">New Listing</string>
    <string name="open_houses">Open Houses</string>
    <string name="recent_price_changes">Recent Price Changes</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="rec_sold">Rec Sold</string>
    <array name="listOfSearchType">
        <item>For Sale</item>
        <item>For Rent</item>
        <item>Recently Sold</item>
    </array>


</resources>
