<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nearby_house_for_sale"
            android:icon="@drawable/nearby_for_sale"
            android:title="@string/menu_nearby_house_for_sale" />
        <item
            android:id="@+id/nav_new_to_market"
            android:icon="@drawable/new_to_market"
            android:title="@string/menu_new_To_Market" />
        <item
            android:id="@+id/nav_price_changes"
            android:icon="@drawable/price_changes"
            android:title="@string/menu_price_change" />
        <item
            android:id="@+id/nav_open_houses"
            android:icon="@drawable/open_houses"
            android:title="@string/menu_open_house" />

        <item
            android:id="@+id/nav_nearby_for_rent"
            android:icon="@drawable/nearby_for_rent"
            android:title="@string/menu_nearby_house_for_rent" />
        <item
            android:id="@+id/nav_recently_sold"
            android:icon="@drawable/sold"
            android:title="@string/menu_nearby_recently_sold" />
        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@drawable/search"
            android:title="@string/menu_advanced_search" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/menu_share_app" />
        <item
            android:id="@+id/nav_app_help"
            android:icon="@drawable/app_help"
            android:title="@string/menu_app_help" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_accessibility"
            android:icon="@drawable/accessibility"
            android:title="@string/menu_accessibility" />



    </group>
</menu>
