<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.advancedsearch.AdvancedSearchFragment">
    <data>
        <variable
            name="viewModel"
            type="com.mobileapps.bhhslux.views.fragments.advancedsearch.AdvancedSearchViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/containerBigMama"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorWhite"
    >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/fragment_head_advanced_search"/>

    <TextView
        android:id="@+id/tvSearchType"
        android:text="@string/search_type"
        app:layout_constraintTop_toBottomOf="@id/top"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/chckForSale"
        android:text="@string/for_sale"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toEndOf="@id/tvSearchType"
        app:layout_constraintEnd_toStartOf="@id/checForRent"
        android:layout_width="wrap_content"
        android:layout_margin="2dp"
        android:onClick="@{(view) -> viewModel.forSale()}"
        android:checked="@{viewModel.forSale}"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checForRent"
        android:text="@string/for_rent"
        android:layout_margin="2dp"
        app:layout_constraintEnd_toStartOf="@id/chckForSale"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toEndOf="@id/chckForSale"
        android:checked="@{viewModel.forRent}"
        android:onClick="@{(view) -> viewModel.forRent()}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkRecentlySold"
        android:text="@string/rec_sold"
        android:layout_margin="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top"
        android:checked="@{viewModel.recentlySOld}"
        android:onClick="@{(view) -> viewModel.recSold()}"
        app:layout_constraintStart_toEndOf="@id/checForRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvStatus"
        android:text="@string/status_advanced"
        app:layout_constraintTop_toTopOf="@id/ragioStatus"
        app:layout_constraintBottom_toBottomOf="@id/ragioStatus"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RadioGroup
        android:id="@+id/ragioStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSearchType"
         >

        <RadioButton
            android:id="@+id/rbActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{(view) -> viewModel.statuActive()}"
            android:checked="@{viewModel.status}"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/rbPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{(view) -> viewModel.statuDesactive()}"
            android:checked="@{!viewModel.status}"
            android:text="@string/pending" />
    </RadioGroup>


    <EditText
        android:id="@+id/EtMinPrice"
        android:hint="@string/enter_minimum_price"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        android:layout_margin="8dp"
        android:inputType="number"
        android:text="@{viewModel.minPrice}"
        android:afterTextChanged="@{(editable) -> viewModel.onMinPriceChanged(editable)}"
        android:background="@drawable/shape_default"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/EtMaxPrice"
        android:hint="@string/enter_max_price"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/EtMinPrice"
        android:layout_margin="8dp"
        android:afterTextChanged="@{(editable) -> viewModel.onMaxPriceChanged(editable)}"
        android:text="@{viewModel.maxPrice}"
        android:inputType="number"
        android:background="@drawable/shape_default"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/EtBeds"
        android:hint="@string/enter_how_many_beds"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/EtMaxPrice"
        android:layout_margin="8dp"
        android:afterTextChanged="@{(editable) -> viewModel.onBedChanged(editable)}"
        android:inputType="number"
        android:text="@{viewModel.beds}"
        android:background="@drawable/shape_default"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/EtBaths"
        android:hint="@string/enter_how_many_baths"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/EtBeds"
        android:layout_margin="8dp"
        android:inputType="number"
        android:background="@drawable/shape_default"
        app:layout_constraintStart_toStartOf="parent"
        android:afterTextChanged="@{(editable) -> viewModel.onBathsChanged(editable)}"
        android:textSize="18sp"
        android:text="@{viewModel.batch}"
        android:gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <CheckBox
        android:id="@+id/chckNewListing"
        app:layout_constraintTop_toBottomOf="@id/EtBaths"
        app:layout_constraintStart_toEndOf="@id/tvSearchType"
        android:layout_margin="12dp"
        android:checked="@{viewModel.newListing}"
        android:layout_width="wrap_content"
        android:onClick="@{(view) -> viewModel.newListing()}"
        android:layout_height="wrap_content"
        android:text="@string/new_listing" />

    <CheckBox
        android:id="@+id/chckOpenHouse"
        app:layout_constraintTop_toBottomOf="@id/chckNewListing"
        app:layout_constraintStart_toEndOf="@id/tvSearchType"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:checked="@{viewModel.openHOuses}"
        android:onClick="@{(view) -> viewModel.openHouse()}"
        android:layout_height="wrap_content"
        android:text="@string/open_houses" />

    <CheckBox
        android:id="@+id/chckRecentPriceChange"
        app:layout_constraintTop_toBottomOf="@id/chckOpenHouse"
        app:layout_constraintStart_toEndOf="@id/tvSearchType"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{(view) -> viewModel.priceChanged()}"
        android:checked="@{viewModel.recentPriceChange}"
        android:text="@string/recent_price_changes" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_weight="0.25"
        android:layout_gravity="start"
        android:layout_margin="4dp"
        android:onClick="@{(view) -> viewModel.clear()}"
        android:background="@drawable/shape_default"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btnSearchByAdvanced"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="0.25"
        android:layout_gravity="start"
        android:layout_margin="4dp"
        android:onClick="@{(view) -> viewModel.search()}"
        android:background="@drawable/shape_default"
        android:text="@string/search" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>