<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".views.fragments.accessibility.AccessibilityFragment">

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/fragment_head_simple"/>

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageView7"
        android:textSize="18sp"
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:src="@drawable/icon_launcher" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ly1"
        app:layout_constraintTop_toBottomOf="@id/imageView7"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="@drawable/shape_default"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etFirstName"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etLastName"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ly2"
        app:layout_constraintTop_toBottomOf="@id/ly1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="@drawable/shape_default"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPhone"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ly3"
        app:layout_constraintTop_toBottomOf="@id/ly2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="@drawable/shape_default"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:hint="@string/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etRePassword"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/ly3"
        android:background="@drawable/shape_login_button_dissable"
        android:text="@string/create_account_button"
        android:layout_margin="8dp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:text="@string/version_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</androidx.constraintlayout.widget.ConstraintLayout>