<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBackGround"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/button_for_go_back_description" />


    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextSubTitle"
        android:text="@string/berkshire_hathaway"
        />

    <TextView
        android:id="@+id/tvSubSubTitle"
        style="@style/Text"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/homeservices"
         />





</androidx.constraintlayout.widget.ConstraintLayout>