<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBackGround"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/button_for_go_back_description" />

    <ImageView
        android:id="@+id/imgIcon"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/tvTitle"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icon_launcher"
        android:contentDescription="@string/icon_of_the_app" />

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/imgIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextTitle"
        android:text="@string/georgia_properties"
        />

    <ImageView
        android:id="@+id/btnMap"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:onClick="onClick"
        app:srcCompat="@drawable/place"
        android:contentDescription="@string/open_map" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>